# Bili23-Downloader-ApiServer

./: .flake8  .gitignore  .gitmodules  README-zh.md  README.md  __main__.py  pyproject.toml  requirements.txt  routes.py  serve.py  session.py  worker.py
bili23_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stubs/: __init__.py  _helpers.py  config.py  pyside6.py
