[project]
name = "bili23-server"
version = "0.1.0"
description = "HTTP server exposing Bili23-Downloader's download-URL resolution as a REST API"
license = "GPL-3.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "psutil>=7.0",
    "httpx>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
bili23-server = "serve:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["serve", "worker", "__main__"]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8",
]

